...
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sub_image"
            android:src="@drawable/subsandwich"
            app:layout_constraintBottom_toTopOf="@+id/order_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/order_now_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/history_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/history_button"
            android:layout_width="0dp"
...
